feat: 支持手工模型与模型参数覆盖
